# Tracy

./: .gitignore  CMakeLists.txt
Examples/Test/: main.cpp
Src/: Camera.cpp  Camera.hpp  HittableObject.hpp  Image.cpp  Image.hpp  Material.hpp  OpenGL.hpp  Quad.cpp  Quad.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Shader.cpp  Shader.hpp  Size.hpp  Sphere.cpp  Sphere.hpp  Texture.cpp  Texture.hpp  Transform.hpp  Window.cpp  Window.hpp
